tests/neg/named-tuples.check
-- [E007] Type Mismatch Error: tests/neg/named-tuples.scala:13:25 ------------------------------------------------------
13 |  val y: (String, Int) = person // error
   |                         ^^^^^^
   |                         Found:    (Test.person : (name: String, age: Int))
   |                         Required: (String, Int)
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg/named-tuples.scala:14:20 ------------------------------------------------------
14 |  val _: NameOnly = person // error
   |                    ^^^^^^
   |                    Found:    (Test.person : (name: String, age: Int))
   |                    Required: Test.NameOnly
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg/named-tuples.scala:15:18 ------------------------------------------------------
15 |  val _: Person = nameOnly // error
   |                  ^^^^^^^^
   |                  Found:    (Test.nameOnly : (name: String))
   |                  Required: Test.Person
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg/named-tuples.scala:17:36 ------------------------------------------------------
17 |  val _: (age: Int, name: String) = person // error
   |                                    ^^^^^^
   |                                    Found:    (Test.person : (name: String, age: Int))
   |                                    Required: (age: Int, name: String)
   |
   | longer explanation available when compiling with `-explain`
